--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <body>
     <span id="ipaddress"></span>
     <h1><%= MY_POD_IP %></h1>
-    <h3><%= MY_POD_IP %></h3>    
+    <h3><%= myVar %></h3>    
 </body>
 </html>
